--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 	<title>Simple Test</title>
+	<link rel="stylesheet" type="text/css" href="animate.css">
+	<link rel="stylesheet" type="text/css" href="homepage.css">
 </head>
 <body>
-	<h2>Hello World from Github.io</h2>
 
-	<footer>Made With Love by carcoco</footer>
+	<h1 class="animated heartBeat">Hello World from Github.io</h1>
+
+	<footer>Made With <span class="animated heartBeat">Love</span> by carcoco</footer>
 </body>
 </html>
